--- a/test/euclidean_vector/CMakeLists.txt
+++ b/test/euclidean_vector/CMakeLists.txt
@@ -3,3 +3,9 @@ cxx_test(
    FILENAME "euclidean_vector_test1.cpp"
    LINK euclidean_vector
 )
+
+cxx_test(
+   TARGET euclidean_vector_test2
+   FILENAME "test2.cpp"
+   LINK euclidean_vector
+)
