--- a/test/euclidean_vector/CMakeLists.txt
+++ b/test/euclidean_vector/CMakeLists.txt
@@ -3,3 +3,33 @@ cxx_test(
    FILENAME "euclidean_vector_test1.cpp"
    LINK euclidean_vector
 )
+
+cxx_test(
+   TARGET euclidean_vector_constructor_test
+   FILENAME "euclidean_vector_constructor_test.cpp"
+   LINK euclidean_vector
+)
+
+cxx_test(
+   TARGET euclidean_vector_operations_test
+   FILENAME "euclidean_vector_operations_test.cpp"
+   LINK euclidean_vector
+)
+
+cxx_test(
+   TARGET euclidean_vector_member_functions_test
+   FILENAME "euclidean_vector_member_functions_test.cpp"
+   LINK euclidean_vector
+)
+
+cxx_test(
+   TARGET euclidean_vector_friends_test
+   FILENAME "euclidean_vector_friends_test.cpp"
+   LINK euclidean_vector
+)
+
+cxx_test(
+   TARGET euclidean_vector_utility_test
+   FILENAME "euclidean_vector_utility_test.cpp"
+   LINK euclidean_vector
+)
